--- a/src/lib/poucheditor.css
+++ b/src/lib/poucheditor.css
@@ -1,4 +1,5 @@
 @import "./styles/index.css";
+@import "./plugins/dragula/dragula.min.css";
 :root{
     --brand: #0fdf99;
     --onbrand:#fff;
@@ -51,6 +52,9 @@
     position: relative;
     text-align: center;
 }
+.pnbtns{
+    position:relative;
+}
 .brand{
     background-color: var(--brand) !important;
     color: var(--onbrand) !important;
@@ -69,14 +73,15 @@
     transition: all 400ms;
     position: relative;
     display: inline;
-    &:hover span {
+  }
+.pbtn:hover span {
         visibility: visible;
-        opacity: 0.7;
+        opacity: 1;
         top: 30px;
         left: 50%;
         margin-left: -76px;
         z-index: 999;
-      }
+ }
 .pbt span {
     position: absolute;
     width: 140px;
@@ -141,5 +146,23 @@
     box-shadow: var(--shadow-3);
     border-radius: 8px;
     margin: 4px auto;
+}
+
+.block{
+    width: 100%;
+    min-height:20vh;
+    height:auto;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
+    border-radius:4px;
+    padding:4px 4px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin:5px 0px;
+    & > .block-head{
+        display: flex;
+        max-height: 35px;
+        
+    }
 }
 
