--- a/src/lib/poucheditor.css
+++ b/src/lib/poucheditor.css
@@ -24,7 +24,7 @@
 }
 :where(html.dark,body.dark) > * .peditor{
      background-color: var(--gray-8) !important;
-     color: var(--gray-3);
+     color: #ffffff;
      & > *{
         background-color: var(--gray-7) !important;
       & > *{
